Revision history for Leyland

{{$NEXT}}
	- Enforcing MooseX::ClassAttribute version 0.24 as previous versions
	  seem to cause problems

0.001005  2011-06-02 23:42:27 Asia/Jerusalem
	- Fixed bugs when loading app-specific view classes [thanks Sebastian Knapp (@giftnuss)]
	- Small documentation fixes

0.001004  2011-05-09 19:55:59 Asia/Jerusalem
	- Fixed bug with passing requests (using $c->pass)
	- When on the development environment, Leyland let's exceptions
	  that do not define MIME templates be handled by Plack's nice
	  stacktrace middleware (which is automatically enabled on the
	  development environment)

0.001003  2011-04-22 22:29:11 Asia/Jerusalem
	- Developers can now create routes that return any media type
	  by setting "returns '*/*'" in the route declaration
	- The check for returned content's type (ascii or binary) now falls
	  back to simple match against qr!^text/! when mime type isn't found

0.001002  2011-04-22 03:00:35 Asia/Jerusalem
	- Leyland will not automatically encode('UTF-8') when output is binary
	- Some more documentation fixes

0.001001  2011-04-19 17:47:23 Asia/Jerusalem
	- Added Leyland::Manual::FAQ which was missing from the initial release
	- Many fixes (mostly typos) to the manual

0.001     2011-04-19 05:28:27 Asia/Jerusalem
	- Initial release